--- a/rock-paper-scissors.html
+++ b/rock-paper-scissors.html
@@ -7,11 +7,75 @@
 <body>
   <script>
 
+let playerCount = 0;
+let compCount = 0;
+
+// Function for computer to select Rock, Paper, or Scissors at random.
+
     function computerPlay() {
-        let computerSelection = ["Rock", "Paper", "Scissors"];
-        return computerSelection[Math.floor(Math.random() * computerSelection.length)]; 
+        let compSelection = ["Rock", "Paper", "Scissors"];
+        return compSelection[Math.floor(Math.random() * compSelection.length)]; 
     }
 
+// Function will allow user to input Rock, Paper or Scissors and will compare against computer.
+
+    function playRound(playerSelection, computerSelection) {
+
+        computerSelection = computerPlay();
+        playerSelection = playerSelection.toLowerCase();
+
+        if (playerSelection == "rock" && computerSelection == "Rock") {
+            return("Tie!");
+        } else if (playerSelection == "rock" && computerSelection == "Paper") {
+            compCount++;
+            return("You Lose! Paper beats Rock!");
+        } else if (playerSelection == "rock" && computerSelection == "Scissors") {
+            playerCount++;
+            return("You win! Rock beats Scissors!");
+        } 
+        if (playerSelection == "paper" && computerSelection == "Rock") {
+            playerCount++;
+            return("You win! Paper beats Rock!");
+        } else if (playerSelection == "paper" && computerSelection == "Paper") {
+            return("Tie!");
+        } else if (playerSelection == "paper" && computerSelection == "Scissors") {
+            compCount++;
+            return("You lose! Scissors beats Paper!");
+        }   
+        if (playerSelection == "scissors" && computerSelection == "Rock") {
+            compCount++;
+            return("You lose! Rock beats Scissors!");
+        } else if (playerSelection == "scissors" && computerSelection == "Paper") {
+            playerCount++;
+            return("You win! Scissors beats Paper!");
+        } else if (playerSelection == "scissors" && computerSelection == "Scissors") {
+           return("Tie!");
+        } else {
+            return("Not a valid argument. Please input Rock, Paper, or Scissors");
+    }
+}
+
+// Function will run game 5 times and show who's the winner.
+    
+    function game() {
+        let rounds
+        for (rounds = 0; rounds < 5; rounds++) {
+            let playerSelection = prompt("Rock, Paper, or Scissors?:");
+            console.log(alert(`You picked ${playerSelection}!`));
+            console.log(alert(playRound(playerSelection)));
+            console.log(alert(`Player Score: ${playerCount} - Computer Score: ${compCount}`));
+            }
+
+        if (playerCount > compCount) {
+            return(`You won the game! Your Score: ${playerCount} - Computer Score: ${compCount}`);
+        } else if (playerCount < compCount) {
+            return(`You lost the game! Your Score: ${playerCount} - Computer Score: ${compCount}`);
+        } else if (playerCount == compCount) {
+            return("It's a tie!")
+        }
+    }
+
+       
   </script>
 </body>
 </html>
